--- a/templates/employe/new.html.twig
+++ b/templates/employe/new.html.twig
@@ -5,7 +5,10 @@
 {% block body %}
     <h1>Create new Employe</h1>
 
-    {{ include('employe/_form.html.twig') }}
+    {{ form_start(form) }}
+        {{ form_widget(form) }}
+        <button class="btn">Save</button>
+    {{ form_end(form) }}
 
     <a href="{{ path('app_employe_index') }}">back to list</a>
 {% endblock %}
